Some cleanup and add MainFX for JavaFX Rewrite